--- a/src/components/TextField/styles.module.css
+++ b/src/components/TextField/styles.module.css
@@ -1,1 +1,9 @@
-.root {}
+.root {
+  height: 26px;
+  width: 100%;
+  border-radius: 4px;
+  box-sizing: border-box;
+  outline: none;
+  box-shadow: none;
+  border: 1px solid gray;
+}
