--- a/src/components/TaskItem/styles.module.css
+++ b/src/components/TaskItem/styles.module.css
@@ -1,1 +1,18 @@
-.root {}
+.root {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 4px;
+  padding: 4px;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+.root:hover {
+  background-color: #f7f7f8;
+}
+
+.isCompleted {
+  text-decoration: line-through;
+}
